# openmm-mdanalysis-reporter

./: .codecov.yml  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  gh-ci.yaml
devtools/ci/gh-actions/conda-envs/: ubuntu.yml
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
example/: benchmark.py  example.py
mdareporter/: __init__.py  _version.py  mdareporter.py
mdareporter/data/: files.py  serialize_simulation.py
mdareporter/data/villin_simulation/: README.md  integrator.xml  serialize_simulation.py  state.xml  system.xml
mdareporter/tests/: conftest.py  test_mdareporter.py
src/mdareporter/: mdareporter.py
tests/: test_mdareporter.py
