[build-system]
requires = [
  "setuptools >= 40.9.0",
  "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "mdareporter"
description = "MDAnalysis based reporter for OpenMM"
license = {file = "LICENSE" }
authors = [
    {name = "Stephen Farr", email = "stephen.farr@ed.ac.uk"},
]
maintainers = [
    {name = "Stephen Farr", email = "stephen.farr@ed.ac.uk"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/sef43/openmm-mdanalysis-reporter"
# documentation = "https://openmm-mdanalysis-reporter.readthedocs.io"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "openmm-mdanalysis-reporter/tests",
]

[tool.setuptools.packages]
find = {namespaces = false, include=["mdareporter"], exclude=["devtools", "docs", "example"]}

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.vcs]
method = "git"
# the below line expects tags to look like '1.0.2'.
# if prefixing with a v, e.g. 'v1.0.2', change it to ["v*"]
match = ["*"]

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.coverage.run]
omit = [
    # Omit the tests
    "*/tests/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.yapf]
COLUMN_LIMIT = 80
INDENT_WIDTH = 4
USE_TABS = false
